# voice-to-text

./: .gitignore  README.md  example.py  pyproject.toml
src/: main.py  reazon_converter.py  whisper_converter.py
tests/: test_comparison.py  test_reazon.py  test_whisper_converter.py
